composer name fixes

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "lemon/lemon",
+    "name": "lemon_framework/lemon",
     "description": "Lemon is simple micro framework that provides routing, etc.",
     "type": "library",
     "license": "MIT",
