--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "scripts": {
-        "post-cmd": [
+        "post-update-cmd": [
             "rm README.md",
             "rm LICENCE.md",
             "rm -rf docs"
