--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "post-create-project-cmd": [
             "rm README.md",
             "rm LICENCE.md",
-            "rm -rf docs",
+            "rm -rf docs"
         ]
     }
 
