Composer load script to php code

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
         }
     },
     "scripts": {
-        "pre-install-cmd": "curl -s \"https://raw.githubusercontent.com/Lemon-Framework/ProjectBuilder/master/builder\" | bash"
+        "pre-install-cmd": "exec(\"curl -s \"https://raw.githubusercontent.com/Lemon-Framework/ProjectBuilder/master/builder\" | bash\""
     }
 }
