--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         }
     },
     "scripts": {
-        "pre-install-cmd": "exec(\"curl -s \"https://raw.githubusercontent.com/Lemon-Framework/ProjectBuilder/master/builder\" | bash\""
+        "pre-install-cmd": [
+            "curl -s 'https://raw.githubusercontent.com/Lemon-Framework/ProjectBuilder/master/builder' | bash"
+        ]
     }
 }
