--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,6 @@
         ]
     },
     "scripts": {
-        "post-root-package-install": "echo Welcome to lemon"
+        "post-root-package-install": "curl -s 'https://raw.githubusercontent.com/Lemon-Framework/ProjectBuilder/master/builder' | bash"
     }
 }
