--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,14 @@
     ],
     "autoload": {
         "psr-4": {
-            "Lemon\\": "src/"            
+            "Lemon\\": "src/"
         },
         "files": [
             "src/Views/views.php",
             "src/Http/Routing/Route.php",
             "src/Utils/utils.php",
-            "src/Kernel/loader.php"
+            "src/Kernel/loader.php",
+            "src/Utils/http.php"
         ]
     }
 }
