--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,9 @@
             "src/Lemon/Support/Http/shorthands.php",
             "src/Lemon/Support/Http/status_codes.php",
             "src/Lemon/Support/Http/Routing/Helpers.php",
-            "src/Lemon/Support/loader.php"
-        ],
-        "classmap": ["src/Lemon/Support"]
+            "src/Lemon/Support/loader.php",
+            "src/Lemon/Support/load.php"
+        ]
     },
     "require": {
         "pestphp/pest": "^1.20"
