--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,14 @@
         ]
     },
     "require": {
+        "php": "^8.1.0" 
+    },
+    "require-dev": {
         "pestphp/pest": "^1.20"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     }
 }
