--- a/composer.json
+++ b/composer.json
@@ -34,11 +34,6 @@
         "php": "^8.1.0" 
     },
     "require-dev": {
-        "pestphp/pest": "^1.20"
-    },
-    "config": {
-        "allow-plugins": {
-            "pestphp/pest-plugin": true
-        }
+        "phpunit/phpunit": "^9"
     }
 }
