--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,11 @@
             "src/Lemon/Support/load.php"
         ]
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Lemon\\Tests\\": "tests/"
+        }   
+    },
     "require": {
         "php": "^8.1.0" 
     },
