--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,13 @@
         "php": "^8.1.0" 
     },
     "require-dev": {
-        "phpunit/phpunit": "^9"
+        "phpunit/phpunit": "^9",
+        "vimeo/psalm": "^4.20",
+        "friendsofphp/php-cs-fixer": "^3.6"
+    },
+    "config": {
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true
+        }
     }
 }
