starts validation, cache; rewrites filesystem, types, lifecycle; and other stuff at this point i dont know

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
             "src/Lemon/Support/Http/status_codes.php",
             "src/Lemon/Support/Http/Routing/Helpers.php",
             "src/Lemon/Support/loader.php",
-            "src/Lemon/Support/load.php"
+            "src/Lemon/Support/load.php",
+            "src/Lemon/Support/Types/helpers.php"
         ]
     },
     "autoload-dev": {
