--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "lemon_framework/lemon",
-    "description": "Lemon is simple micro framework that provides routing, etc.",
+    "description": "Dead simple micoframework.",
     "type": "library",
     "license": "MIT",
     "authors": [
