--- a/composer.json
+++ b/composer.json
@@ -34,14 +34,15 @@
         }   
     },
     "require": {
-        "php": "^8.1.0" 
+        "php": "^8.1.0",
+        "psr/container": "^2.0",
+        "psr/simple-cache": "^3.0" 
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
         "vimeo/psalm": "^4.20",
         "friendsofphp/php-cs-fixer": "^3.6",
-        "phpstan/phpstan": "^1.4",
-        "nunomaduro/phpinsights": "^2.1"
+        "phpstan/phpstan": "^1.4"
     },
     "config": {
         "allow-plugins": {
