--- a/composer.json
+++ b/composer.json
@@ -49,5 +49,10 @@
             "composer/package-versions-deprecated": true,
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "dev-v3-develop"
+        }
     }
 }
