--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -15,4 +15,4 @@ jobs:
     - uses: actions/checkout@v2
 
     - run: composer install
-    - run: ./vendor/bin/phpstan analyze src tests
+    - run: ./vendor/bin/phpstan
