--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "require": {
         "php": "^8.1.0",
         "psr/container": "^2.0",
-        "psr/simple-cache": "^3.0" 
+        "psr/simple-cache": "^3.0",
+        "psr/log": "^3.0" 
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
