--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -2,9 +2,9 @@ name: PHPStan static analysis
 
 on:
   push:
-    branches: [ v3-develop ]
+    branches: [ master ]
   pull_request:
-    branches: [ v3-develop ]
+    branches: [ master ]
 
 jobs:
   build:
